# AmethystMenu

./: CMakeLists.txt  CREDITS.md  README.md  about.md  changelog.md  mod.json  support.md
.github/workflows/: discord-notify.yml  multi-platform.yml  update-geode.yml
res/files/: TERMS.md
src/: BtnLayer.cpp  BtnLayer.hpp  hacks.cpp  hacks.hpp  main.cpp
src/hacks/aprilfools/: Usernames.cpp
src/hacks/bypass/: CharacterFilter.cpp  TextLength.cpp
src/hacks/global/: Speedhack.cpp
src/hacks/player/: IconHack.cpp  Noclip.cpp
